--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "bower": "^1.4.1",
+    "jquery": "^2.1.3",
     "lodash": "^3.6.0",
     "numeral": "^1.5.3",
     "polymer": "git://github.com/custom-elements/polymer#master",
