--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui-stat-value",
+  "name": "ui-stats",
   "version": "0.0.0",
   "authors": [
     "Duane Fields <dfields@glgroup.com>"
