--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "main": "index.js",
   "scripts": {
     "install": "./node_modules/.bin/bower install",
+    "start": "./node_modules/.bin/polymer-serve --cache .",
     "test": "./node_modules/.bin/polymer-serve ."
   },
   "author": "Duane Fields",
