--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bower": "^1.4.1",
     "jquery": "^2.1.3",
     "lodash": "^3.6.0",
+    "moment": "^2.10.2",
     "numeral": "^1.5.3",
     "polymer": "git://github.com/custom-elements/polymer#master",
     "polymer-serve": "^0.0.30",
