--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "moment": "^2.10.2",
     "numeral": "^1.5.3",
     "polymer": "git://github.com/custom-elements/polymer#master",
-    "polymer-serve": "^0.0.33",
+    "polymer-serve": "git://github.com/custom-elements/polymer-serve#master",
     "ui-styles": "git://github.com/custom-elements/ui-styles#master"
   },
   "description": "",
